2012-03-28  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/52689
	* libsupc++/Makefile.am (LTCXXCOMPILE, CXXLINK): Tweak.
	* libsupc++/Makefile.in: Regenerated.
	* src/Makefile.am (LTCXXCOMPILE, CXXLINK): Tweak.
	(libstdc___la_SOURCES): Add in compatiblity files, with content
	that varies with -DPIC.
	* src/Makefile.in: Regenerated.
	* src/c++11/Makefile.am (LTCXXCOMPILE, CXXLINK): Tweak.
	* src/c++11/Makefile.in: Regenerated.
	* src/c++11/compatibility-atomic-c++0x.cc: Guard with PIC.
	* src/c++11/compatibility-c++0x.cc: Same.
	* src/c++11/future.cc: Consolidate compatibility bits into..
	* src/c++11/mutex.cc: Consolidate compatibility bits into..
	* src/c++11/compatibility-thread-cxx0x.cc: ...here. New.
	* src/c++98/Makefile.am (LTCXXCOMPILE, CXXLINK): Tweak.
	* src/c++98/Makefile.in: Regenerated.
	* src/c++98/compatibility-ldbl.cc: Guard with PIC
	* src/c++98/compatibility-list-2.cc: Same.
	* src/c++98/compatibility-list.cc: Same.
	* src/c++98/compatibility.cc: Tweak comments.

2012-03-28  Terry Guo  <terry.guo@arm.com>

	* testsuite/Makefile.am (TEST_GCC_EXEC_PREFIX): New.
	* testsuite/Makefile.in: Regenerated.

2012-03-27  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/std/functional (mem_fn): Qualify to prevent ADL.
	* testsuite/20_util/function_objects/mem_fn/adl.cc: New.

2012-03-27  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/std/type_traits (result_of): Fix handling of cv-quals.
	* testsuite/20_util/result_of/1.cc: New.
	* testsuite/20_util/result_of/2.cc: New.
	* testsuite/20_util/declval/requirements/1_neg.cc: Adjust dg-error
	line numbers.
	* testsuite/20_util/make_signed/requirements/typedefs_neg.cc:
	Likewise.
	* testsuite/20_util/make_unsigned/requirements/typedefs_neg.cc:
	Likewise.

2012-03-23  David S. Miller  <davem@davemloft.net>

	* config/abi/post/sparc-linux-gnu/baseline_symbols.txt: Update.

2012-03-23  Benjamin Kosnik  <bkoz@redhat.com>

	* scripts/testsuite_flags.in (--cxxflags): Let CXXFLAGS set -g -O2.